src/components/components.css
* html {
    margin: 0;
    padding: 0;
} 

body {
    font-size: 62.5%;
    background-image: url('../images/imageBig.jpg');
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    display: flex;
    justify-content: center;

  }


.navdiv {
    display: flex;
    justify-content: space-around;
    width: 100vw;
    background-color: rgb(10,10,10);
    position: fixed;
    margin-top: 0;
    top: 0;
    right: 0;
}



.contentdiv {
    font-size: 1.75em;
    font-family: Arial, Helvetica, sans-serif;
    color: #cecece;
    text-align: left;
    width: 92.5vw;
    background-color: rgba(10,10,10,.8);
    border-radius: 1em;
    margin: 0 auto;
    margin-top: 3em;
    overflow-wrap: break-word;
    word-wrap: break-word;
    padding: 1em .5em .5em .5em;

}

.urltext {
    font-size: .5em;
}


li {
    list-style-type: none;  /* removes bullets */
}

ul {
    padding: 0;
}

.material-icons-outlined {
    color: #4bccff;
    font-size: 3.6em;
    cursor: pointer;
}

.narrow {
    max-width: 50vw
}



.textinput {
    background-color: rgba(10,10,10,.8);
    color: #cecece;
    width: 50vw;
}


@media only screen and (max-width: 700px) {

    .textinput {
       width: 80vw;
    }
 }


 form {
    font-size: 1.75em;
    font-family: Arial, Helvetica, sans-serif;
    margin: auto;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 0;
   
}

.buttondiv {
    background-color:rgba(10,10,10,.8);
    border: 1px solid #4bccff;
    border-radius: .25em;
    color: #4bccff;
    font-size: 1em;
    cursor: pointer;
    width: 120px;
    margin: 0 auto;
}

.buttondiv:hover {
    background-color:#4bccff;
    border: 1px solid rgba(10,10,10,.8);
    border-radius: .25em;
    color: rgba(10,10,10,.8);
    font-size: 1em;
    cursor: pointer;
    width: 120px;
    margin: 0 auto;
}

